Fix SonarQube issues across controllers, services, config, and tests